--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "yellow-up",
+  "name": "4chan-plus",
   "version": "0.0.2",
   "type": "module",
-  "description": "样式",
+  "icon": "https://s.4cdn.org/image/favicon-ws.ico",
+  "description": "4chan 样式优化&统一",
   "main": "./src/main.ts",
   "author": "wenxig",
   "scripts": {
@@ -11,20 +12,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/postcss-pxtorem": "^6.0.3",
+    "@vant/use": "^1.6.0",
     "@vueuse/components": "^10.7.2",
     "@vueuse/core": "^10.7.2",
-    "autoprefixer": "^10.4.17",
     "jquery": "^3.7.1",
-    "vue": "^3.3.4"
+    "lodash-es": "^4.17.21",
+    "naive-ui": "^2.38.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.4",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.18",
-    "@types/node": "^20.11.6",
+    "@types/lodash-es": "^4.17.12",
+    "@types/postcss-pxtorem": "^6.0.3",
     "@vitejs/plugin-legacy": "^5.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.17",
     "postcss-preset-env": "^9.3.0",
     "postcss-pxtorem": "^6.1.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "sass": "^1.66.1",
     "scss": "^0.2.4",
     "tailwindcss": "^3.4.1",
