--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "postcss-preset-env": "^9.3.0",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.2.5",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sass": "^1.66.1",
     "scss": "^0.2.4",
